[tool.poetry]
name = "liteboty-stream"
version = "0.2.0"
description = ""
authors = ["yejue <1145331931@qq.com>"]
readme = "README.md"
homepage = "https://github.com/yejue/liteboty"
keywords = ["liteboty", "litebot", "ros", "bot", "liteboty-stream"]

[tool.poetry.dependencies]
python = "^3.10"
PySide6 = "^6.8.1.1"
redis = "^5.2.1"
pillow = "^11.0.0"
click = "^8.1.7"
liteboty = ">=0.2, <0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
liteboty-stream = "liteboty_stream.liteboty_stream:main"
